--- a/gb/24/4/5/n14218654.md
+++ b/gb/24/4/5/n14218654.md
@@ -1,8 +1,8 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵安徒生故乡大爆满 观众宛如梦回东方</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218658-2404041923082124-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218926-aedcb5efcd72a275ca05250942c85404-600x400.jpg" />
 <h6>2024年4月4日晚，美国神韵世界艺术团在丹麦欧登塞奥德翁剧院（Odeon）上演了今年首场演出。图为剧院大厅。（黄芩／大纪元）
 </h6>
 <hr>
@@ -11,7 +11,7 @@
 <p>奥登塞（Odense）一词来源于“Odins Vi”，也就是“奥丁的神殿”之意，奥丁是北欧神话中的大神（最高神），奥登塞是丹麦最古老的城市之一。著名作家和诗人安徒生就出生在这里。</p>
 <p>安徒生童话中有一则预言《新世纪的女神》。这位女神让中国的长城崩溃，东西方文化融汇贯通，并发出震动天地的回响，安徒生要向新世纪女神致敬。如今，安徒生故乡的人迎来了神韵，好似安徒生笔下的《新世纪的女神》，仿佛安徒生早已穿越时空观看了神韵一般。</p>
 <h2>资深IT主管：观神韵是了解中国传统文化的好机会</h2>
-<figure id="attachment_14218667" aria-describedby="caption-attachment-14218667" style="width: 605px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14218667-2404041839142124.jpg"><img class=" wp-image-14218667" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218667-2404041839142124-600x399.jpg" alt="" width="605" b="402" /></a><figcaption id="caption-attachment-14218667" class="wp-caption-text">2024年4月4日晚，神韵世界艺术团在丹麦欧登赛奥德翁剧院（Odeon）上演了本年度首场演出，国际间合作的大型IT项目主管、资深专案经理Per Gidionsen Frisk与女儿共同观看了演出。（黄芩／大纪元）</figcaption></figure>
+<figure id="attachment_14218667" aria-describedby="caption-attachment-14218667" style="width: 605px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14218667-2404041839142124.jpg"><img decoding="async" class=" wp-image-14218667" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218667-2404041839142124-600x399.jpg" alt="" width="605" b="402" /></a><figcaption id="caption-attachment-14218667" class="wp-caption-text">2024年4月4日晚，神韵世界艺术团在丹麦欧登赛奥德翁剧院（Odeon）上演了本年度首场演出，国际间合作的大型IT项目主管、资深专案经理Per Gidionsen Frisk与女儿共同观看了演出。（黄芩／大纪元）</figcaption></figure>
 <p>“舞蹈和技巧都令人印象非常深刻。中国（古典）舞对我来说是全新的，令人难忘。我女儿对此很感兴趣，我想她也认为这实在太好了。”Per Gidionsen Frisk先生观看神韵感到非常兴奋，</p>
 <p>Per Gidionsen Frisk先生是一位资深IT项目主管，多年来，一直负责很多丹麦与国际间合作的项目管理和开发，从哥本哈根市的大型复杂IT项目到丹麦驻多国大使馆的公共外交项目。</p>
 <p>传统的中国古典舞的美好，特别是女演员甩起长长的水袖，还有黄花盛开的节目，令Frisk陶醉，“我最喜欢花，还有长袖的舞蹈。”他表示最重要的是他从演出中对中国历史产生了非常浓厚的兴趣。平时他对文化了解不多，也没那么大兴趣，“但我发现中国历史非常令人着迷，能对历史上的宫廷文化有些了解。宫廷文化并非普通人的文化，我觉得这非常令人兴奋。”</p>
@@ -23,7 +23,7 @@
 <p>他认为，“她（神韵）对洞察中国过去的文化提供了非常好的机会，如今这种文化（在中国）已不复存在了。正如（主持人）介绍说的，这在当今的中国无法上演，我认为这真的很可惜。因为中国拥有悠久而丰富的文化，而大多数中国人可能都不知道，我为此感到深深的遗憾。”</p>
 <p>Frisk接着表示，“我觉得这既令人着迷又不幸。令人着迷的是，现在我们看到了可以追溯到几个世纪、几十年前的宫廷文化。不幸的是，中国人看不到她。所以它（中共）从他们（中国民众）那里夺走了丰富的文化。”</p>
 <h2>机缘巧合观神韵 高尔夫俱乐部经理“梦回东方”</h2>
-<figure id="attachment_14218668" aria-describedby="caption-attachment-14218668" style="width: 606px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14218668-2404041839242124.jpg"><img class=" wp-image-14218668" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218668-2404041839242124-600x399.jpg" alt="" width="606" b="403" /></a><figcaption id="caption-attachment-14218668" class="wp-caption-text">2024年4月4日晚，神韵世界艺术团在丹麦欧登赛奥德翁剧院（Odeon）上演了本年度首场演出，高尔夫俱乐部经理Esben Hallundb?k Hansen与太太共同观赏了演出。（黄芩／大纪元）</figcaption></figure>
+<figure id="attachment_14218668" aria-describedby="caption-attachment-14218668" style="width: 606px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14218668-2404041839242124.jpg"><img decoding="async" class=" wp-image-14218668" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218668-2404041839242124-600x399.jpg" alt="" width="606" b="403" /></a><figcaption id="caption-attachment-14218668" class="wp-caption-text">2024年4月4日晚，神韵世界艺术团在丹麦欧登赛奥德翁剧院（Odeon）上演了本年度首场演出，高尔夫俱乐部经理Esben Hallundb?k Hansen与太太共同观赏了演出。（黄芩／大纪元）</figcaption></figure>
 <p>高尔夫俱乐部经理Esben Hallundb?k Hansen观看演出后赞叹道，“这是一场精彩的演出，色彩和表演都很棒！”他介绍说自己能够买到票实属“机缘巧合”，他并不知道会看到什么样的演出。观看神韵后，他大赞，“太精彩了，令人印象深刻。”他还说，“这是我第一次观看，我想她触动了我的心。”</p>
 <p>Esben Hallundb?k Hansen在丹麦欧登塞高尔夫俱乐担任经理。自1927年以来，该俱乐部一直是全国第五古老的高尔夫俱乐部。俱乐部拥有27洞和良好的训练机会，对所有高尔夫球手都具有吸引力。</p>
 <p>神韵把中国五千年神传文化鲜活地展现在舞台上，这给Hansen留下极为深刻的印象。他感叹道，“与我们现在所看到的相比，古代中国实在是太神奇了。”他强调，“这就是那个信息，演员们传达的信息，古时候的中国要美好得多。”</p>
@@ -32,7 +32,7 @@
 <p>他描述说，听着二胡悠扬动听的音乐让他穿越时空“梦回东方”。</p>
 <p>最后，他想对神韵艺术家说，“你们都非常杰出，祝你们好运。”</p>
 <h2>神韵引人入胜 设计师：所有故事都蕴含美好信息</h2>
-<figure id="attachment_14218765" aria-describedby="caption-attachment-14218765" style="width: 605px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14218765-2404050116422124.jpg"><img class=" wp-image-14218765" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218765-2404050116422124-600x400.jpg" alt="" width="605" b="403" /></a><figcaption id="caption-attachment-14218765" class="wp-caption-text">2024年4月4日晚，神韵世界艺术团在丹麦欧登赛奥德翁剧院（Odeon）上演了本年度首场演出，美工设计师和视频制作人Louie Nesta Bryde-Jonasen和女友、哥本哈根大学神经博士生Carolyn Goddard观赏了演出。（新唐人电视台）</figcaption></figure>
+<figure id="attachment_14218765" aria-describedby="caption-attachment-14218765" style="width: 605px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14218765-2404050116422124.jpg"><img decoding="async" class=" wp-image-14218765" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218765-2404050116422124-600x400.jpg" alt="" width="605" b="403" /></a><figcaption id="caption-attachment-14218765" class="wp-caption-text">2024年4月4日晚，神韵世界艺术团在丹麦欧登赛奥德翁剧院（Odeon）上演了本年度首场演出，美工设计师和视频制作人Louie Nesta Bryde-Jonasen和女友、哥本哈根大学神经博士生Carolyn Goddard观赏了演出。（新唐人电视台）</figcaption></figure>
 <p>Louie Nesta Bryde-Jonasen是美工设计师和视频制作人，他也设计标志、徽标等。女友Carolyn Goddard是哥本哈根大学神经学博士生。对Bryde-Jonasen来说，神韵带给他很多惊喜，也给他打开了思路。</p>
 <p>这位设计师对神韵展示的中国古典舞赞不绝口，“神韵太精彩了，令人惊叹。与西方古典芭蕾舞不同，这里的舞蹈节目更幽默风趣，使用了更多的道具，我觉得非常美妙。”</p>
 <p>Bryde-Jonasen表示，作为设计师，他始终在寻找灵感，“作为一名设计师，我一直在寻找看待事物的新方式，我永远不会关闭任何东西，所以我总是睁大眼睛观察一切。当看到什么事情时，会有很多新的印象，我也会观察其他人如何叙述和解读故事，所以从（神韵）中我得到许多新的色彩、新的印象，如何来讲述故事。”</p>
@@ -44,37 +44,37 @@
 <p>责任编辑：王亦笑</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/30/n14214727.md#1">神韵瑞典首都爆满落幕 观众感恩神的祝福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14215606.md#1">林雪平首场演出 瑞典政要：神韵使人升华</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14216234.md#1">庆幸神韵来到林雪平 眼科医生陶醉其中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14216330.md#1">视觉艺术家：神韵的神圣光束为世界带来希望</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216403.md#1">画家赞神韵色彩有能量 与音乐搭配完美</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216415.md#1">法国王者之城盼来神韵 兰斯主流赞完美演出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/30/n14214727.md#1">神韵瑞典首都爆满落幕 观众感恩神的祝福</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/1/n14215606.md#1">林雪平首场演出 瑞典政要：神韵使人升华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/1/n14216234.md#1">庆幸神韵来到林雪平 眼科医生陶醉其中</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/1/n14216330.md#1">视觉艺术家：神韵的神圣光束为世界带来希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216403.md#1">画家赞神韵色彩有能量 与音乐搭配完美</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216415.md#1">法国王者之城盼来神韵 兰斯主流赞完美演出</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/26/n10089507.md#1" target="_blank">共产暴政录：“破四旧”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14215650.md#1">【未解之谜】2024最新预言 红朝要变天？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/3/n14217618.md#1">一场大地震前的神奇预警</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14194007.md#1">【杨延昭传奇】杨门女将大破铁甲骑兵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/23/n14209226.md#1">张僧繇的凹凸技法——《雪山红树图》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/29/n14213546.md#1">【未解之谜】癌症的奇特疗法（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/3/n14217489.md#1">【全球新闻】中国民间抗争不断 上千人砸派出所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/5/n14218503.md#1">【秦鹏观察】习遇六挑战 核心原因被美大使道破</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/25/n14210699.md#1">【传统音乐】飞天艺术学院器乐大赛优胜者音乐会 | 首播：美东时间 4月6日 晚间8:00</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/3/n14217059.md#1">台湾发生规模7.2地震 海啸已达日本与那国岛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216922.md#1">金价创新高 巴菲特等专家如何看待投资黄金</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216476.md#1">与赵丽颖离婚3年 冯绍峰罕见自曝单亲爸生活</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216426.md#1">传记片《李小龙》即将开拍 李安之子李淳主演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/3/n14217751.md#1">陆乐团发文称“中国台湾” 遭“台湾祭”禁演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/4/n14218403.md#1">吴京新片清明档惨败 首日票房仅143元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/3/n14217813.md#1">杜淳演员妻饭店吃饭被烫伤 现场一片狼藉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14216255.md#1">砧板、抽油烟机难缠污垢 2招天然清洁剂轻松搞定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/28/n14212999.md#1">1种光源致黄斑变性 增失明风险 做到2点可预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/3/n14217782.md#1">7件事地震后不要做 有些你可能不知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/4/n14218172.md#1">【健康新视界】7种让头发更浓密的天然增发剂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/1/n14215829.md#1">如何让鲜花花束保存更久？专家教你绝招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/25/n12575680.md#1">如玉树临风 张养浩散曲赏析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347510.md#1">【菁英论坛】军中又异动 北京有人夺权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347432.md#1">【马克时空】以哈战争一周年 开启领导先走模式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346708.md#1">【思想领袖】美国必须在太空领域击败中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346454.md#1">前政治局常委吴邦国病亡 “五不搞”曾引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345971.md#1">韩国海警扣押越界非法捕捞的中国船只</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346796.md#1">席琳·迪翁看美式足球赛 被淋泼大桶运动饮料</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346351.md#1">想了解空服员吗？ 先看这个工作的优缺点比较</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343757.md#1">肠躁症患者肠癌风险增 中医食疗芳疗可改善</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/5/n14218654.htm">神韵安徒生故乡大爆满 观众宛如梦回东方</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/4/5/n14218654.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/5/n14218654.htm">神韵安徒生故乡大爆满 观众宛如梦回东方</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/5/n14218654.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
